@@ -4,17 +4,17 @@ buildscript {
 	}
     dependencies {
         classpath('org.yaml:snakeyaml:1.19')
-        classpath('io.swagger.codegen.v3:swagger-codegen-maven-plugin:3.0.31')
     }
 }
 
 plugins {
-	id("org.springframework.boot") version "2.7.18"
+	id("org.springframework.boot") version "3.3.0"
 	id('io.spring.dependency-management') version '1.1.4'
 	id('java')
 	id('eclipse')
 	id("de.undercouch.download") version "5.5.0"
 	id("io.freefair.lombok") version "8.4"
+	id "org.openapi.generator" version "7.5.0"
 }
 
 //Buildship doesn't use that hooks (https://discuss.gradle.org/t/when-does-buildship-eclipse-customization-run/20781/2)
@@ -63,7 +63,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	implementation 'org.springframework.boot:spring-boot-starter-freemarker'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
-	implementation 'org.springframework.boot:spring-boot-starter-quartz'
+	//implementation 'org.springframework.boot:spring-boot-starter-quartz'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-cache'
@@ -72,7 +72,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-amqp'
 	implementation 'org.springframework.boot:spring-boot-starter-reactor-netty'
 
-	implementation 'io.jsonwebtoken:jjwt:0.9.1' // JSON Web Token Support For The JVM
+	//implementation 'io.jsonwebtoken:jjwt:0.9.1' // JSON Web Token Support For The JVM
+	implementation 'io.jsonwebtoken:jjwt-api:0.12.5' // JSON Web Token Support For The JVM
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5' 
 	
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'org.hsqldb:hsqldb'
@@ -85,22 +88,31 @@ dependencies {
 	testImplementation 'org.springframework.amqp:spring-rabbit-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	
-	implementation 'com.github.ben-manes.caffeine:caffeine:3.0.2'
+	implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
 	
 	implementation "com.google.guava:guava:${guavaVersion}"
 	
-	implementation "org.springdoc:springdoc-openapi-ui:${openapiVersion}"
-	 
+	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${openapiVersion}"
+	// dependencies of openapi-generator
+	implementation "com.google.code.gson:gson:2.11.0"
+	implementation "org.openapitools:jackson-databind-nullable:0.2.1"
+	implementation "com.squareup.okhttp3:okhttp:4.10.0"
+	implementation "com.squareup.okhttp3:logging-interceptor:4.10.0"
+	implementation "io.gsonfire:gson-fire:1.9.0"
+	// Quartz 2.3.2 integrated into Spring Boot 3.3 does not support jakarta namespace
+	//implementation "javax.transaction:javax.transaction-api:1.3"
+	implementation group: 'org.quartz-scheduler', name: 'quartz', version: '2.5.0-rc1'
+		 
 	implementation "org.mapstruct:mapstruct:${mapstructVersion}"
 	annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
 	testAnnotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
 	
 	implementation "com.querydsl:querydsl-core:${queryDslVersion}"
-	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
+	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}:jakarta"
 	annotationProcessor(
-		"com.querydsl:querydsl-apt:${queryDslVersion}:jpa",
-		"javax.persistence:javax.persistence-api",
-		"javax.annotation:javax.annotation-api"
+		"com.querydsl:querydsl-apt:${queryDslVersion}:jakarta",
+		"jakarta.persistence:jakarta.persistence-api",
+		"jakarta.annotation:jakarta.annotation-api"
 	)
 	
 	// Freemark dependencies
@@ -112,15 +124,20 @@ dependencies {
 	implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-csv:2.13.0"
 	
 	// SOAP client
-	implementation "com.sun.xml.ws:jaxws-rt:2.3.1"
+	implementation "com.sun.xml.ws:jaxws-rt:3.0.2"
+    //implementation("com.sun.xml.ws:jaxws-rt") {
+    //    exclude(group = "com.sun.xml.bind", module = "jaxb-impl")
+    //}
+    //runtimeOnly("org.glassfish.jaxb:jaxb-runtime")
 	
 	// JAX-RS Client with Jersey
-	implementation "org.glassfish.jersey.containers:jersey-container-servlet:2.32"
-	implementation "org.glassfish.jersey.media:jersey-media-json-jackson:2.32"
-	implementation "org.glassfish.jersey.ext:jersey-spring5:2.32"
+	implementation "org.glassfish.jersey.containers:jersey-container-servlet:3.1.5"
+	implementation "org.glassfish.jersey.media:jersey-media-json-jackson:3.1.5"
+	implementation "org.glassfish.jersey.ext:jersey-spring6:3.1.5"
 
 	// Quartz addon for jobs which is not included in "org.springframework.boot:spring-boot-starter-quartz"
-	implementation "org.quartz-scheduler:quartz-jobs"
+	//implementation "org.quartz-scheduler:quartz-jobs"
+	implementation group: 'org.quartz-scheduler', name: 'quartz-jobs', version: '2.5.0-rc1'
 	
 	// this Mockito version must be used because at later versions Mockito.when() does not work with  
 	// class.static_method() input using PowerMockito.spy. It does work only on mocked object. We need 
@@ -150,37 +167,22 @@ task downloadApi(type: Download, description: "Download Swagger OpenLigaDB JSON 
 	onlyIfModified true
 }
 
-import io.swagger.codegen.v3.CodegenConfigLoader
-import io.swagger.codegen.v3.DefaultGenerator
-import io.swagger.codegen.v3.ClientOptInput
-import io.swagger.codegen.v3.ClientOpts
-import io.swagger.v3.parser.OpenAPIV3Parser
-
-task generateApi {
-	dependsOn downloadApi
-	String swaggerSourceFile = "$projectDir/src/main/resources/swagger/matchdataApi.json"
-	String swaggerTargetFolder = "$buildDir/${generatedSourcesRelativePath}/swagger/main/java"
-	
-	doLast {
-		def openAPI = new OpenAPIV3Parser().read(swaggerSourceFile, null, null)
-        def clientOpts = new ClientOptInput().openAPI(openAPI)
-        def codegenConfig = CodegenConfigLoader.forName('spring')
-        codegenConfig.setOutputDir(swaggerTargetFolder)
-        clientOpts.setConfig(codegenConfig)
-        def clientOps = new ClientOpts()
-        clientOps.setProperties([
-                'dateLibrary': 'java8-localdatetime', // Date library to use
-                'useTags': 'true',  // Use tags for the naming
-                'interfaceOnly': 'true',   // Generating the Controller API interface and the models only
-                'apiPackage': 'com.msiggi.openligadb.api',
-                'modelPackage': 'com.msiggi.openligadb.model',
-                'sourceFolder': ''
-        ])
-        clientOpts.setOpts(clientOps)
-
-        def generator = new DefaultGenerator().opts(clientOpts)
-        generator.generate() // Executing the generation
-	}
+task generateApi(type: org.openapitools.generator.gradle.plugin.tasks.GenerateTask) {
+    generatorName = "java"
+    generateApiTests = false
+    generateModelTests = false
+    inputSpec = "$projectDir/src/main/resources/swagger/matchdataApi.json".toString()
+    outputDir = "$buildDir/${generatedSourcesRelativePath}/swagger/main/java"
+    apiPackage = "com.msiggi.openligadb.api"
+    modelPackage = "com.msiggi.openligadb.model"
+    configOptions = [
+            dateLibrary: "java8-localdatetime",
+            useTags: 'true',
+            interfaceOnly: 'true', // Generating the Controller API interface and the models only
+            sourceFolder: '',
+            useSpringBoot3: 'true',
+            useJakartaEe: 'true'
+    ]
 }
 
 task generateTestDatabaseScripts {
@@ -245,27 +247,31 @@ compileJava {
 
 tasks.withType(JavaCompile) {
 	dependsOn generateTestDatabaseScripts, generateApi//, copyBuildInfo
+	options.encoding = 'UTF-8'
 	options.compilerArgs += [
-		//"--enable-preview",
 		"-Amapstruct.defaultComponentModel=spring",
-		"-Amapstruct.unmappedTargetPolicy=IGNORE"
+		"-Amapstruct.unmappedTargetPolicy=IGNORE",
+		"-parameters",
+		"-verbose"
 	]
 }
 
 tasks.withType(Test) {
 	jvmArgs += [
-		//"--enable-preview"
 	]
 }
 
 tasks.withType(JavaExec) {
 	jvmArgs += [
-		//"--enable-preview"
 	]
 }
 
 clean {
 	delete "bin/main/META-INF"
+}
+
+bootJar {
+	setDuplicatesStrategy(DuplicatesStrategy.WARN)
 }
 
 springBoot {
